# solana-proxy

./: Anchor.toml  package.json  rust-toolchain.toml  tsconfig.json
programs/endpoint-mock/src/: lib.rs
programs/oft-mock/: Cargo.toml
programs/oft-mock/src/: lib.rs
programs/oft-mock/src/instructions/: init_oft.rs  mod.rs  send.rs
programs/oft-mock/src/state/: peer_config.rs
programs/oft/src/: lib.rs  msg_codec.rs
programs/oft/tests/: msg_codec.rs
programs/solana-proxy/: Cargo.toml
programs/solana-proxy/src/: lib.rs
tasks/solana/: index.ts
tests/: setup.ts  solana-oft.test.ts  solana-proxy.test.ts  solana-proxy.ts
