[package]
name = "oft-mock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oft_mock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "=1.17.31"
anchor-spl = "0.29.0"
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "7aebbd7c79b2dc818f7bb054aed2405ca076b9d6" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", rev = "7aebbd7c79b2dc818f7bb054aed2405ca076b9d6" }